New commit, Updating for jQuery

--- a/public_html/technology.html
+++ b/public_html/technology.html
@@ -12,6 +12,9 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     </head>
     <body id="tech">
         <div class="container">
@@ -23,12 +26,11 @@ and open the template in the editor.
                     <div class="row">
                         <div class="col-xs-6">
                             <h2>HTML5</h2>
-                            <p>HTML5 (or "HyperText Markup Language") Is what I <br />
+                            <p>HTML5 (or "HyperText Markup Language") Is what I 
                                 mainly use to make websites. It provides me with<br />
-                                the text you see and the links to different websites.<br />
+                                the text you see and the links to different websites.
                                 It works hand in hand with other coding tools, such<br />
-                                as CSS and Bootstrap, to make websites like these<br />
-                                possible.
+                                as CSS and Bootstrap, to make websites like these possible.<br />
                                 To learn more about HTML go to the website found<br />
                                 <a class="current-link" href="http://en.wikipedia.org/wiki/HTML">HERE</a>.
                             </p>
@@ -36,9 +38,9 @@ and open the template in the editor.
                         </div>
                         <div class="col-xs-6">
                             <h2>CSS</h2>
-                            <p>CSS (or "Cascading Style Sheets") Is what I use to<br />
+                            <p>CSS (or "Cascading Style Sheets") Is what I use to
                                 add colors, borders, backgrounds, and much more. <br />
-                                It pretty much adds style or "fance" to the website<br />
+                                It pretty much adds style or "fance" to the website
                                 It works with HTML sites to add these cool things.<br />
                                 To learn more about CSS go to the website found <br />
                                 <a class="current-link" href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets">HERE</a>.
@@ -55,8 +57,8 @@ and open the template in the editor.
                                 and adapts to mobile and computer settings. This<br />
                                 is my first time heavily applying Bootstrap to a
                                 project. It's very helpful and gives me fancy <br />
-                                tricks to use such as jumbotron and responsive <br />
-                                images. To learn more about Bootstrap click on the link<br />
+                                tricks to use such as jumbotron and responsive images.<br />
+                                To learn more about Bootstrap click on the link<br />
                                 <a class="current-link" href="http://getbootstrap.com/">HERE</a>.
                             </p>
                             <!--A paragraph describing Bootstrap with a link to the "getbootstrap" page that I use for help-->
@@ -65,27 +67,61 @@ and open the template in the editor.
                     <div class="row">
                         <div class="col-xs-12">
                             <h2>Javascript</h2>
-                            <p>Javascript is an object-oriented computer programming<br />
-                                language commonly used to create interactive effects.
-                                Its used to move objects across the screen. You <br />
-                                can do nearly anything with it. The possibilities
-                                are endless. I used it to make a game; snake. Its<br />
-                                an extremely complicated and advanced language.
+                            <p>Javascript is an object-oriented computer programming
+                                language commonly used to create interactive effects.<br />
+                                Its used to move objects across the screen. You
+                                can do nearly anything with it. The possibilities<br />
+                                are endless. I used it to make a game; snake. It's
+                                an extremely complicated and advanced language.<br />
                                 To learn more about Javascript click on the link<br />
                                 <a class="current-link" href="http://en.wikipedia.org/wiki/Snake_(video_game)">HERE</a>.
+                            </p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
                             <h2>melonJS</h2>
-                            <p>melonsJS is an open-source HTML5 based community <br />
+                            <p>melonsJS is an open-source HTML5 based community
                                 game engine. It's basically a language used to create<br />
-                                games in HTML. It is a very complicated language <br />
-                                truly based off of Javascript. It interacts with <br />
-                                many other programs, hence "open-source". I used <br />
+                                games in HTML. It is a very complicated language 
+                                truly based off of Javascript. It interacts with<br />
+                                many other programs, hence "open-source". I used
                                 it to create my "Mario" based game "Danger Dude".<br />
-                                To learn more about melonJS click on the link<br />
+                                To learn more about melonJS click on the link <br />
                                 <a class="current-link" href="http://melonjs.org/">HERE</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2>Tiled</h2>
+                            <p>
+                                Tiled is basically a map editor for games. I used
+                                this program for my "mario" game. It is simple to<br />
+                                use and easily accessible. What you use in Tiled
+                                are "tiles" or "tilesets" which are certain textures<br />
+                                in a group of squares or cubes. I prefer using
+                                tiled to create game maps.<br />
+                                To learn more about Tiled click on the link<br />
+                                <a class="current-link" href="http://gamedevelopment.tutsplus.com/tutorials/introduction-to-tiled-map-editor-a-great-platform-agnostic-tool-for-making-level-maps--gamedev-2838">HERE</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2>jQuery</h2>
+                            <p>
+                                jQuery is a fast, small, and feature-rich JavaScript
+                                library. It makes websites more stylized and <br />
+                                personalized by accessing html and css through 
+                                Javascript. Though it is not a coding language <br />
+                                on its own, more of a technique, it is very handy
+                                and commonly used in stead of Bootstrap. Personally<br />
+                                I prefer it over Bootstrap due to its convenience
+                                and accessibility.<br />
+                                To learn more about jQuery click the link <br />
+                                <a class="current-link" href="http://jquery.com/">HERE</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -97,9 +133,11 @@ and open the template in the editor.
                     </nav>
                     <!--The "nav" here makes these words in black links to my other pages-->
                 </div>
-                <!-- SCM Music Player http://scmplayer.net -->
-                <script type="text/javascript" src="http://scmplayer.net/script.js" 
-                data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
-                <!--I used the SCM music player to play music on my website-->
-                </body>
-                </html>
+            </div>
+        </div>
+        <!-- SCM Music Player http://scmplayer.net -->
+        <script type="text/javascript" src="http://scmplayer.net/script.js" 
+        data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
+        <!--I used the SCM music player to play music on my website-->
+    </body>
+</html>
