--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -12,6 +12,9 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     </head>
     <body id="pro">
         <div class="container">
@@ -19,7 +22,7 @@ and open the template in the editor.
                 <h1 align="center">Projects</h1>
             </div>
             <div class="row">
-                <h2>So far I have done 2 projects including this one.</h2>
+                <h2>So far I have done 4 projects including this one.</h2>
                 <div class="col-xs-10">
                     <div class="row">
                         <div class="col-xs-3"><h2>Portfolio</h2></div>
@@ -89,18 +92,22 @@ and open the template in the editor.
                         </div>
                     </div>
                 </div>
-                    <div class="col-xs-2">
-                        <nav class="list-group">
-                            <a class="list-group-item" href="index.html">About Me</a>
-                            <a class="list-group-item" href="projects.html">Projects</a>
-                            <a class="list-group-item" href="technology.html">Technology</a>
-                        </nav>
-                    </div>  
-                    <!-- SCM Music Player http://scmplayer.net -->
-                    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-       <script src="js/bootstrap.min.js"></script>
-                    <script type="text/javascript" src="http://scmplayer.net/script.js" 
-                    data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
-                    <!--I used the SCM music player to play music on my website-->
-                    </body>
-                    </html>
+                <div class="col-xs-2">
+                    <nav class="list-group">
+                        <a class="list-group-item" href="index.html">About Me</a>
+                        <a class="list-group-item" href="projects.html">Projects</a>
+                        <a class="list-group-item" href="technology.html">Technology</a>
+                    </nav>
+                    <!--The "nav" here makes these words in black links to my other pages-->
+                </div>
+            </div>
+        </div>
+
+        <!-- SCM Music Player http://scmplayer.net -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="http://scmplayer.net/script.js" 
+        data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
+        <!--I used the SCM music player to play music on my website-->
+    </body>
+</html>
