--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -71,7 +71,7 @@ and open the template in the editor.
                     </div>
                     <div class="row">
                         <div class="col-xs-3"><h2>Mario</h2></div>
-                        <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/MarioScreenshot.png"><br/>
+                        <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/MarioScreenshot.png"><br />
                             My Mario type game, inofficially known as "Danger Dude"<br />
                             is a game, obviously, based off of the Mario Bros. <br />
                             franchise, by Nintendo. This game is a "side-scroller"<br />
@@ -91,23 +91,21 @@ and open the template in the editor.
                             as my other projects.
                         </div>
                     </div>
+                    <div class="col-xs-3"><h2>Portfolio 3</h2></div>
+                    <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/Port3Screenshot.png"><br />
+                        Portfolio 3 was a reboot of my Portfolio 2 and an example<br />
+                        of how I could use jQuery. If changes aren't 
                 </div>
                 <div class="col-xs-2">
                     <nav class="list-group">
                         <a class="list-group-item" href="index.html">About Me</a>
                         <a class="list-group-item" href="projects.html">Projects</a>
                         <a class="list-group-item" href="technology.html">Technology</a>
+                        <a class="list-group-item" href="jquery.html">JQuery</a>
                     </nav>
                     <!--The "nav" here makes these words in black links to my other pages-->
                 </div>
             </div>
         </div>
-
-        <!-- SCM Music Player http://scmplayer.net -->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="http://scmplayer.net/script.js" 
-        data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
-        <!--I used the SCM music player to play music on my website-->
     </body>
 </html>
