--- a/public_html/technology.html
+++ b/public_html/technology.html
@@ -130,14 +130,11 @@ and open the template in the editor.
                         <a class="list-group-item" href="index.html">About Me</a>
                         <a class="list-group-item" href="projects.html">Projects</a>
                         <a class="list-group-item" href="technology.html">Technology</a>
+                        <a class="list-group-item" href="jquery.html">JQuery</a>
                     </nav>
                     <!--The "nav" here makes these words in black links to my other pages-->
                 </div>
             </div>
         </div>
-        <!-- SCM Music Player http://scmplayer.net -->
-        <script type="text/javascript" src="http://scmplayer.net/script.js" 
-        data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
-        <!--I used the SCM music player to play music on my website-->
     </body>
 </html>
