--- a/public_html/jquery.html
+++ b/public_html/jquery.html
@@ -17,7 +17,7 @@ and open the template in the editor.
         <script type="text/javascript" src="jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
         <link rel="stylesheet" href="jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
         <!--Jquery Links for UI, fancybox, and other attributes-->
-
+        <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
     <body>
         <h1 class="uppercase">JQuery Ex Page</h1>
@@ -98,7 +98,7 @@ and open the template in the editor.
             <h4>Thurd</h4>
             <p>3rd</p>
         </div>
-        <!--Flipping text-->
+        <!--Accordion-->
 
         <script type="text/javascript" src="script.js"></script>
     </body>
