Blog update commit

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -94,7 +94,19 @@ and open the template in the editor.
                     <div class="col-xs-3"><h2>Portfolio 3</h2></div>
                     <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/Port3Screenshot.png"><br />
                         Portfolio 3 was a reboot of my Portfolio 2 and an example<br />
-                        of how I could use jQuery. If changes aren't 
+                        of how I could use jQuery. I added a jQuery page to the <br />
+                        Portfolio 2 which displayed elements of jQuery that I have<br />
+                        learned and know how to use. I also added a few jQuery <br />
+                        techniques into a few of my other pages.
+                    </div>
+                    <div class="col-xs-3"><h2>Blog</h2></div>
+                    <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/BlogScreenshot"><br />
+                        My Blog, unofficially named "Commpunity" is a social <br />
+                        network in which I used the coding language of php for <br />
+                        the first time. It was challenging and exiting, I stayed<br />
+                        a bit ahead of the class for this one as I enjoyed it so<br />
+                        much. I plan to add more style to it. I had a very fun <br />
+                        time working on this project and it can be found on this link<a class="current-link" href="http://localhost/HarrisR-Blog/index.php">HERE!</a>
                     </div>
                     <div class="col-xs-2">
                         <nav class="list-group">
