--- a/public_html/technology.html
+++ b/public_html/technology.html
@@ -124,6 +124,25 @@ and open the template in the editor.
                             </p>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2>PHP</h2>
+                            <p>
+                                PHP, or Hypertext Processor(Personal Home Page) 
+                                is a popular general-purpose scripting language <br />
+                                that is especially suited to web development. 
+                                PHP is commonly used in the most powerful websites<br />
+                                such as yahoo, Facebook, and YouTube. I used
+                                PHP for my Blog, social network, website.This <br />
+                                language is specifically helpful for those who would
+                                like to save data from their site such as user <br />
+                                data and accessing data. I like the simplicity
+                                and compatibility of PHP. <br />
+                                To learn a bit more on PHP click the link
+                                <a class="current-link" href="http://php.net/">HERE</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-2">
                     <nav class="list-group">
